# mcp-memory-server-sigma

./: .dockerignore  .env.example  .gitignore  CHAT_README.md  README.md  chat.py  pyproject.toml
.github/workflows/: deploy-service.yaml  run-tests.yaml
aws/: ecr.yaml  parameters.dev.yaml.example  parameters.production.yaml.example  parameters.staging.yaml.example  template.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  login_to_ecr.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: README.md  requirements.in  requirements.txt
src/openmemory/: __main__.py  main.py  sync_qdrant_from_postgres.py
src/openmemory/app/: database.py  mcp_server.py  schemas.py  secrets.py  slack_api.py
src/openmemory/app/routers/: memories.py
src/openmemory/app/utils/: memory.py
src/th_logging/: __init__.py  logging-config.ini  th_logging.py
test/: requirements.txt  test_th_logging.py
